--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
-AuthUserFile /cita/d/www/home/jbraden/jamboree/.htpasswd
+AuthUserFile /cita/d/www/home/jbraden/Jamboree/.htpasswd
 AuthName "CITA Jamboree Submission"
 AuthType Basic
 require valid-user
 
 php_value upload_max_filesize 10M
 php_value post_max_size 11M
+
+<Files .htaccess>
+Order allow,deny
+Deny from all
+</Files>
